src/objects/Apttus__CycleTimeGroup__c.object
<CustomObject>
    <description>Holds the groups monitored for cycle time data capture</description>
    <fields>
        <fullName>Apttus__Cycle_Time_Field__c</fullName>
        <description>The field associated with the group</description>
        <label>Cycle Time Field</label>
        <referenceTo>Apttus__CycleTimeField__c</referenceTo>
        <relationshipLabel>Cycle Time Groups</relationshipLabel>
        <relationshipName>Cycle_Time_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The group description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Field_Label__c</fullName>
        <description>The associated field label</description>
        <label>Field Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__From__c</fullName>
        <description>The field value which marks the beginning of the group</description>
        <label>From Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the group is active for cycle time data capture</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__To__c</fullName>
        <description>The field value which marks the end of the group</description>
        <label>To Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Cycle Time Group</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Cycle_Time_Field__c</columns>
        <columns>Apttus__Field_Label__c</columns>
        <columns>Apttus__From__c</columns>
        <columns>Apttus__To__c</columns>
        <columns>Apttus__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycle Time Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>